--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,11 @@ jobs:
           - 1.11.x
           - 1.12.x
           - 1.13.x
-    runs-on: ubuntu-latest
+        OS:
+          - ubuntu-latest
+          - windows-latest
+          - macOS-latest
+    runs-on: ${{ matrx.OS }}
     steps:
 
       - name: Set up Go ${{ matrix.go-version }}
