--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,18 +2,14 @@ name: Build and tests
 on: [push]
 jobs:
   build:
-    name: Build
+    name: Build and Test on Linux
     strategy:
       matrix:
         go-version:
           - 1.11.x
           - 1.12.x
           - 1.13.x
-        OS:
-          - ubuntu-latest
-          - windows-latest
-          - macOS-latest
-    runs-on: ${{ matrix.OS }}
+    runs-on: ubuntu-latest
     steps:
 
       - name: Set up Go ${{ matrix.go-version }}
@@ -25,13 +21,25 @@ jobs:
       - name: Get programs
         run: |
           export GOBIN=$HOME/bin
-          curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $HOME/bin v1.19.1
+
+          # build Go tools
+          go get github.com/restic/rest-server
+          go get github.com/restic/calens
+          go get github.com/mitchellh/gox
+
+          # minio
+          wget -O $GOBIN/minio https://dl.minio.io/server/minio/release/linux-amd64/minio
+          chmod 755 $GOBIN/minio
 
       - name: Check out code
         uses: actions/checkout@v1
 
       - name: Build
         run: |
+          rest-server --help
+          gox --help
+          calens --help
+          minio --help
           go run -mod=vendor build.go --goos linux
           go run -mod=vendor build.go --goos windows
           go run -mod=vendor build.go --goos darwin
